--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,13 @@ gen/
 local.properties
 
 # Eclipse project files
-.classpath
-.project
+# .classpath
+# .project
 
 ####
 proguard.cfg
 project.properties
 res/
+
+# emacs backups 
+*~
