--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,11 +4,9 @@
       android:versionCode="1"
       android:versionName="1.0">
 
+        <uses-sdk
+        android:minSdkVersion="5"
+        android:targetSdkVersion="19" />
+        
 
-        <uses-sdk android:minSdkVersion="5"/>
-    
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-
-
-    </application>
 </manifest>
