--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="framework.android"
-      android:versionCode="1"
-      android:versionName="1.0">
+    package="jsonbroker.library.android"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
-        <uses-sdk
-        android:minSdkVersion="5"
+    <uses-sdk
+        android:minSdkVersion="8"
         android:targetSdkVersion="19" />
-        
+
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+    </application>
 
 </manifest>
